[package]
name = "serde_mpd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# description = ""
readme = "README.md"
# repository = "https://github.com/titaniumtraveler/base16_color_scheme"
# homepage = "https://github.com/titaniumtraveler/base16_color_scheme"
# documentation = "https://docs.rs/base16_color_scheme"

[dependencies]
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
